--- a/src/Components/ProblemSolving/ProblemSolving.css
+++ b/src/Components/ProblemSolving/ProblemSolving.css
@@ -1,6 +1,6 @@
-.problem-solving {
+/* .problem-solving {
     height: 500px;
-}
+} */
 
 .home-section-name {
     color: white;
