--- a/src/Components/Projects/Projects.css
+++ b/src/Components/Projects/Projects.css
@@ -3,9 +3,9 @@
     margin-top: 7%;
     text-align: center;
 }
-.projects{
+/* .projects{
     padding-top: 30px;
-}
+} */
 .home-section-name{
     color: white;
     margin-top: 100px;
